--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -5,5 +5,20 @@
   "main": "index.js",
   "author": "Moses Idowu",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.31",
+    "nodemon": "^2.0.16",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "apollo-server-express": "^3.7.0",
+    "express": "^4.18.1",
+    "graphql": "^16.4.0",
+    "graphql-middleware": "^6.1.25",
+    "merge-graphql-schemas": "^1.7.8",
+    "ts-node": "^10.7.0"
+  }
 }
