--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -1,24 +1,37 @@
 {
-  "name": "sovtech-swapi",
-  "version": "1.0.0",
-  "description": "sovtech swapi graphql api",
-  "main": "index.js",
-  "author": "Moses Idowu",
-  "license": "MIT",
-  "private": true,
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.31",
-    "nodemon": "^2.0.16",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
-  },
-  "dependencies": {
-    "apollo-server-express": "^3.7.0",
-    "express": "^4.18.1",
-    "graphql": "^16.4.0",
-    "graphql-middleware": "^6.1.25",
-    "merge-graphql-schemas": "^1.7.8",
-    "ts-node": "^10.7.0"
-  }
+    "name": "sovtech-swapi",
+    "version": "1.0.0",
+    "description": "sovtech swapi graphql api",
+    "main": "index.js",
+    "author": "Moses Idowu",
+    "license": "MIT",
+    "private": true,
+    "scripts": {
+        "dev": "nodemon -r dotenv/config --exec ts-node index.ts dotenv_config_path=.env.local"
+    },
+    "devDependencies": {
+        "@types/compression": "^1.7.2",
+        "@types/express": "^4.17.13",
+        "@types/helmet": "^4.0.0",
+        "@types/node": "^17.0.31",
+        "nodemon": "^2.0.16",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.6.4"
+    },
+    "dependencies": {
+        "@graphql-tools/schema": "^8.3.10",
+        "apollo-server-cache-redis": "^3.3.1",
+        "apollo-server-express": "^3.7.0",
+        "compression": "^1.7.4",
+        "dotenv": "^16.0.0",
+        "dotenv-cli": "^5.1.0",
+        "express": "^4.18.1",
+        "graphql": "15.7.2",
+        "graphql-middleware": "^6.1.25",
+        "graphql-tools": "^8.2.8",
+        "helmet": "^5.0.2",
+        "ioredis": "^5.0.4",
+        "merge-graphql-schemas": "^1.7.8",
+        "ts-node": "^10.7.0"
+    }
 }
