--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -2,24 +2,32 @@
     "name": "sovtech-swapi",
     "version": "1.0.0",
     "description": "sovtech swapi graphql api",
-    "main": "index.js",
+    "main": "index.ts",
     "author": "Moses Idowu",
     "license": "MIT",
     "private": true,
     "scripts": {
-        "dev": "nodemon -r dotenv/config --exec ts-node index.ts dotenv_config_path=.env.local"
+        "dev": "nodemon -r dotenv/config --exec ts-node index.ts dotenv_config_path=.env.local",
+        "dev-watch": "concurrently \"yarn dev\" \"yarn generate --watch\"",
+        "generate": "graphql-codegen"
     },
     "devDependencies": {
         "@types/compression": "^1.7.2",
+        "@types/concurrently": "^7.0.0",
         "@types/express": "^4.17.13",
         "@types/helmet": "^4.0.0",
         "@types/node": "^17.0.31",
+        "concurrently": "^7.1.0",
         "nodemon": "^2.0.16",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.6.4"
     },
     "dependencies": {
+        "@graphql-codegen/cli": "^2.6.2",
+        "@graphql-codegen/typescript": "^2.4.10",
+        "@graphql-codegen/typescript-resolvers": "^2.6.3",
         "@graphql-tools/schema": "^8.3.10",
+        "apollo-datasource-rest": "^3.5.3",
         "apollo-server-cache-redis": "^3.3.1",
         "apollo-server-express": "^3.7.0",
         "compression": "^1.7.4",
