--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -9,16 +9,22 @@
     "scripts": {
         "dev": "nodemon -r dotenv/config --exec ts-node index.ts dotenv_config_path=.env.local",
         "dev-watch": "concurrently \"yarn dev\" \"yarn generate --watch\"",
-        "generate": "graphql-codegen"
+        "generate": "graphql-codegen",
+        "test": "jest --forceExit --detectOpenHandles"
     },
     "devDependencies": {
         "@types/compression": "^1.7.2",
         "@types/concurrently": "^7.0.0",
         "@types/express": "^4.17.13",
         "@types/helmet": "^4.0.0",
+        "@types/ioredis-mock": "^5.6.0",
+        "@types/jest": "^27.5.0",
         "@types/node": "^17.0.31",
+        "@types/supertest": "^2.0.12",
         "concurrently": "^7.1.0",
         "nodemon": "^2.0.16",
+        "supertest": "^6.2.3",
+        "ts-jest": "^28.0.2",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.6.4"
     },
@@ -39,6 +45,8 @@
         "graphql-tools": "^8.2.8",
         "helmet": "^5.0.2",
         "ioredis": "^5.0.4",
+        "ioredis-mock": "^8.2.0",
+        "jest": "^28.1.0",
         "merge-graphql-schemas": "^1.7.8",
         "ts-node": "^10.7.0"
     }
